Bug 150251 - account dialog should not disable ICQ UIN field
Summary: account dialog should not disable ICQ UIN field
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-27 09:26 UTC by Martin Koller
Modified: 2007-10-07 17:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
editaccountwidgets.diff (1.39 KB, patch)
2007-09-30 17:41 UTC, Dennis Nienhüser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2007-09-27 09:26:51 UTC
Version:           0.12.6 (using KDE 3.5.7 "release 74.2" , openSUSE )
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.18.8-0.5-default

If someone asks me to send him my ICQ number (which I don't remember by heart) I'd like to be able to copy/paste it from somewhere. The most logical way for me would be to copy it from my kopete ICQ accounts properties dialog - which is impossible since the ICQ UIN LineEdit is disabled (which makes it impossible to select/copy text from there but also makes it harder to read (grey on grey ...)

Please change that field to enabled but "not editable"
Comment 1 Dennis Nienhüser 2007-09-30 17:41:49 UTC
Created attachment 21720 [details]
editaccountwidgets.diff

This one 's been bugging me as well before ;-)
The patch changes the account ID edit widgets from disabled to read-only for
both ICQ and AIM. I only have an ICQ account to test, but think it should be
the same for AIM.

Btw., with kopete on KDE 4 you can also quickly get your UIN by clicking on the
identiy icon in the bottom right corner of the main kopete window and choose
"Copy link location" from the context menu when selecting an icq account.
Comment 2 Matt Rogers 2007-10-07 17:20:42 UTC
Fixed for AIM and ICQ, and all the other protocols :)