Fix bug 150251

I took the patch from 150251 and extended the fix for all the protocols.
Initial patch by Dennis Nienhueser. Thanks for the patch!

CCMAIL: earthwings@gentoo.org
BUG: 150251

svn path=/trunk/KDE/kdenetwork/kopete/; revision=721217